--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,13 @@
         grid-template-columns: 1fr 1fr;
         gap: 15px;
       }
+      .option-wrapper {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+      }
       .option-btn {
+        width: 100%;
         padding: 20px;
         font-size: 18px;
         cursor: pointer;
@@ -66,6 +72,23 @@
         background: #fff;
         transition: all 0.2s;
         font-weight: 500;
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        text-align: left;
+      }
+      .option-key {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        width: 24px;
+        height: 24px;
+        background: #f0f0f0;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        font-size: 14px;
+        color: #666;
+        font-weight: bold;
       }
       .option-btn:hover:not(:disabled) {
         background: #f8f9fa;
@@ -85,28 +108,49 @@
         opacity: 0.7;
       }
 
-      .image-option {
+      .image-option-wrapper {
+        position: relative;
+        cursor: pointer;
         width: 100%;
         aspect-ratio: 1 / 1;
+        transition: all 0.2s;
+      }
+      .image-option {
+        width: 100%;
+        height: 100%;
         object-fit: contain;
         background-color: #f8f9fa;
         border-radius: 8px;
         border: 4px solid transparent;
-        cursor: pointer;
-        transition: all 0.2s;
       }
-      .image-option:hover {
+      .image-key-label {
+        position: absolute;
+        top: 8px;
+        left: 8px;
+        width: 24px;
+        height: 24px;
+        background: rgba(255, 255, 255, 0.9);
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: bold;
+        color: #333;
+        font-size: 14px;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+        z-index: 5;
+      }
+      .image-option-wrapper:hover {
         transform: scale(1.02);
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       }
-      .image-option.correct {
+      .image-option-wrapper.correct .image-option {
         border-color: #28a745;
         background: #d4edda;
       }
-      .image-option.incorrect {
+      .image-option-wrapper.incorrect .image-option {
         border-color: #dc3545;
         opacity: 0.4;
-        cursor: not-allowed;
       }
 
       .loading {
