--- a/public/index.html
+++ b/public/index.html
@@ -5,34 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RC Learning Game</title>
     <style>
+      html,
+      body {
+        height: 100%;
+      }
+
       body {
         font-family: sans-serif;
         background-color: #f0f0f0;
         margin: 0;
-        padding: 20px;
+        padding: 0;
+        box-sizing: border-box;
+        height: 100dvh;
+        overflow: hidden;
         display: flex;
         justify-content: center;
         align-items: center;
-        min-height: 100vh;
         flex-direction: column;
       }
 
       #streak-container {
-        width: 100%;
-        max-width: 600px;
-        margin-bottom: 10px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 100;
       }
 
       #streak-progress-bg {
         width: 100%;
         height: 12px;
         background: #ddd;
-        border-radius: 6px;
         overflow: hidden;
-        margin-top: 5px;
         box-shadow: inset 0 2px 4px rgba(0,0,0,0.1);
         display: none; /* Shown when streak > 0 */
       }
@@ -58,22 +62,19 @@
         --shake-intensity: 1px;
       }
 
-      #game-container {
+      #game-content {
         width: 100%;
         max-width: 600px;
-        background: white;
-        padding: 30px;
-        border-radius: 12px;
-        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+        padding: 10px;
         text-align: center;
+        box-sizing: border-box;
       }
       .challenge-target {
-        margin-bottom: 30px;
+        margin-bottom: 12px;
       }
       .challenge-target img {
-        width: 100%;
-        max-width: 300px;
-        height: auto;
+        /* Square: constrained by viewport width, height left after 3 button rows, and desktop cap */
+        width: min(calc(100vw - 40px), calc(100dvh - 192px), 280px);
         aspect-ratio: 1 / 1;
         border-radius: 12px;
         object-fit: contain;
@@ -81,7 +82,7 @@
         box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
       }
       .challenge-target .target-name {
-        font-size: 2.5em;
+        font-size: clamp(1.5rem, 7dvw, 2.5rem);
         font-weight: bold;
         color: #333;
       }
@@ -89,7 +90,11 @@
       .options-grid {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        gap: 15px;
+        gap: 10px;
+      }
+      /* Name-to-face: row height fills remaining viewport after text label */
+      .options-grid:has(.image-option-wrapper) {
+        grid-auto-rows: min(calc((100dvh - 112px) / 3), 190px);
       }
       .option-wrapper {
         position: relative;
@@ -98,8 +103,8 @@
       }
       .option-btn {
         width: 100%;
-        padding: 20px;
-        font-size: 18px;
+        padding: 10px 14px;
+        font-size: 16px;
         cursor: pointer;
         border: 2px solid #eee;
         border-radius: 8px;
@@ -146,7 +151,7 @@
         position: relative;
         cursor: pointer;
         width: 100%;
-        aspect-ratio: 1 / 1;
+        height: 100%;
         transition: all 0.2s;
       }
       .image-option {
@@ -249,14 +254,10 @@
   <body>
     <div id="announcement-overlay"></div>
     <div id="streak-container">
-      <div id="streak-progress-bg">
-        <div id="streak-progress-fill"></div>
-      </div>
+      <div id="streak-progress-bg"><div id="streak-progress-fill"></div></div>
     </div>
-    <div id="game-container">
-      <div id="game-content">
-        <div class="loading">Loading RC Profiles...</div>
-      </div>
+    <div id="game-content">
+      <div class="loading">Loading RC Profiles...</div>
     </div>
 
     <script type="module" src="game.js"></script>
