--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,7 @@
       }
       .challenge-target {
         margin-bottom: 12px;
+        position: relative;
       }
       .challenge-target img {
         /* Square: constrained by viewport width, height left after 3 button rows, and desktop cap */
@@ -85,6 +86,28 @@
         font-size: clamp(1.5rem, 7dvw, 2.5rem);
         font-weight: bold;
         color: #333;
+      }
+      .role-badge {
+        display: inline-block;
+        font-size: 11px;
+        font-weight: 600;
+        padding: 2px 8px;
+        border-radius: 10px;
+        text-transform: uppercase;
+        letter-spacing: 0.05em;
+        margin-top: 6px;
+        position: absolute;
+        top: -2em;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+      .role-badge--alumni {
+        background: #e9ecef;
+        color: #6c757d;
+      }
+      .role-badge--faculty {
+        background: #e7f3ff;
+        color: #0969da;
       }
 
       .options-grid {
